Resolves: tdf#115046 don't restore a sheet-local DBData from temporary

And don't clear AutoFilter button flags in the new temporary range.

Change-Id: I273de1e04632ac99c267523b2843665d257fd361